add color heat map display

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -38,6 +38,7 @@ THE SOFTWARE.
         <script src="js/jquery-ajax-blob-arraybuffer.js"></script>
         <script src="js/oms.min.js"></script>
         <script src="js/math.min.js"></script>
+        <script src='js/tinycolor.js'></script>
         <script src="js/as.js"></script>
         <script src="js/PredModel.js"></script>
 
