--- a/public_html/as.html
+++ b/public_html/as.html
@@ -66,10 +66,7 @@ THE SOFTWARE.
                 
                 oms.addListener('click', function(marker) {
                     // Download sound data and play
-                    IllGridfsGet('publicDb', 'publicUser', 'publicPwd', 'data', marker, 
-                    soundTag, function(){
-                        alert("No data found!");
-                    });
+                    IllGridfsGet('publicDb', 'publicUser', 'publicPwd', 'data', marker, soundPlayTag, soundTag);
                 });
                 
                 // time visualization
@@ -101,13 +98,11 @@ THE SOFTWARE.
                     var marker = {};
                     var selectedItem = chart.getSelection()[0];
                     if (selectedItem) {
+                        marker.selectedItem = selectedItem;
                         marker.filename= dataTable.getValue(selectedItem.row, 4);
                         marker.tag= dataTable.getValue(selectedItem.row, 5);
                         // Download sound data and play
-                        IllGridfsGet('publicDb', 'publicUser', 'publicPwd', 'data', marker, 
-                        soundTag, function(){
-                            alert("No data found!");
-                        });
+                        IllGridfsGet('publicDb', 'publicUser', 'publicPwd', 'data', marker, soundPlayTag, soundTag);
                     }
                 });
 
