add whistle and finger snap audio class models

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -249,6 +249,8 @@ THE SOFTWARE.
                     <select id="classes">
                         <option value="none">None</option>
                         <option value="speech">Speech</option>
+                        <option value="whistle">Whistle</option>
+                        <option value="finger_snap">Finger snap</option>
                         <option value="cough">Cough</option>
                         <option value="air_conditioner">Air conditioner</option>
                         <option value="car_horn">Car horn</option>
