--- a/public_html/as_stream.html
+++ b/public_html/as_stream.html
@@ -108,14 +108,14 @@ THE SOFTWARE.
                 });
 
                 // interactive display
-                var currDate;
                 setInterval(function(){
-                    currDate = new Date();
+                    var currDate = new Date();
                     $("#time").val('Time '+currDate.toISOString());
                 },1000);
                 
                 var recurFun;
                 (recurFun = function(){
+                    var currDate = new Date();
                     var prevDate = new Date(currDate);
                     prevDate.setTime(prevDate.getTime() - $("#winlen").val());
                     $("#t1").val(prevDate.toISOString());
