use .html for innerhtml instead of val for input

--- a/public_html/as.html
+++ b/public_html/as.html
@@ -114,7 +114,7 @@ THE SOFTWARE.
                 $("#t2").val(currDate.toISOString());
                 setInterval(function(){
                     var d = new Date();
-                    $("#time").val('Time '+d.toISOString());
+                    $("#time").html('Time '+d.toISOString());
                 },1000);
             });
             
