--- a/public_html/as_stream.html
+++ b/public_html/as_stream.html
@@ -110,7 +110,7 @@ THE SOFTWARE.
                 // interactive display
                 setInterval(function(){
                     var currDate = new Date();
-                    $("#time").val('Time '+currDate.toISOString());
+                    $("#time").html('Time '+currDate.toISOString());
                 },1000);
                 
                 var recurFun;
